colorbox title color contrast fix

--- a/scss/tmitg.scss
+++ b/scss/tmitg.scss
@@ -1450,6 +1450,7 @@ iframe#sb-player {
 #cboxTitle {
 	text-align: right;
 	left: -30px;
+	color: rgba(0,0,0,.54);
 }
 
 /* special styles for screen readers */
